fix: restore trim() and use reflection to set field in test
References:
- [Spring CORS Configuration - Spring Docs](https://docs.spring.io/spring-framework/reference/web/webmvc/mvc-config/cors.html)

Co-authored-by: Cursor <cursoragent@cursor.com>